# Doodle_Jump

./: .gitignore  README.md
Project/: CMakeLists.txt  game.cpp
Project/inc/: AbilityManager.hpp  AllHeaders.hpp  BulletManager.hpp  CollisionManager.hpp  EnemyManager.hpp  GameEngine.hpp  GameManager.hpp  ManagerContainer.hpp  Managers.hpp  PlatformManager.hpp
Project/src/: AbilityManager.cpp  BulletManager.cpp  CollisionManager.cpp  EnemyManager.cpp  GameEngine.cpp  GameManager.cpp  PlatformManager.cpp
